[package]
name = "randomx-bindings-sys"
version = "0.1.3"
authors = ["Ellis Frank <mrelfranko@disroot.org>", "Matt Smith <matt@offtopica.uk>"]
edition = "2018"

license = "BSD-3-Clause"

description = "FFI bindings for RandomX"
repository = "https://github.com/McFranko/randomx-bindings-sys"

exclude = [
	"randomx/*.md",
	"randomx/*.sln",
	"randomx/.*",
	"randomx/LICENSE",
	"randomx/audits/*",
	"randomx/doc/*",
	"randomx/vcxproj/*",
]

[build-dependencies]
bindgen = "0.58.1"
cmake = "0.1.45"
